# DENOS

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
packaging/arch/: PKGBUILD
packaging/aur/: PKGBUILD
packaging/flatpak/: dnnid.denos.signer.desktop  dnnid.denos.signer.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  copyright  denos.desktop.template  dnnid.denos.signer.metainfo.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs  nip46.rs  pc55.rs  state.rs  updater.rs  upv2.rs
src/assets/icons/blockchain/: index.ts
src/components/: AcquireIdModal.tsx  BackupProofsModal.tsx  BlossomImage.tsx  ClaimIdModal.tsx  CrossMintTransferModal.tsx  Dashboard.tsx  DebugConsole.tsx  EcashReceiveModal.tsx  EcashSendModal.tsx  EcashTransactionDetailsModal.tsx  EcashWallet.tsx  FollowsSelector.tsx  IdsView.tsx  KeypairManager.tsx  LockScreen.tsx  MintsModal.tsx  Onboarding.tsx  PendingSendsModal.tsx  PinPrompt.tsx  Profile.tsx  ProofsModal.tsx  SatoshiIcon.tsx  Settings.tsx  SignerDashboard.tsx  Wallet.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  custom-select.tsx  dialog.tsx  feedback.tsx  input.tsx  switch.tsx
src/hooks/: useDragScroll.ts
src/services/: bitcoin.ts  blossomServers.ts  cashu.ts  dnn.ts  ecashStore.ts  evm.ts  lnurl.ts  nip61.ts  nip87.ts  nostrFollows.ts  nostrProfile.ts  nutZapPublisher.ts  zcash.ts
(+2 files in other folders)
